# wasm-perf-test

./: Cargo.toml  README.md
benches/: wasm.rs
primes_wasm/: Cargo.toml
primes_wasm/src/: main.rs
src/: bin.rs  lib.rs
